# pic

./: .gitignore
Java/: Copy.java  Filter.java  Generator.java  Rename.java  Utils.java
Python/: PicUtils.py  extension.py
java/: Filter.java  RenameAll.java  Utils.java
python/: pic.py  pyproject.toml
rust/: CLAUDE.md  Cargo.toml
rust/src/: copy.rs  images.rs  input.rs  main.rs  rename.rs
