[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = [ "black==25.1.0" ]
flake8 = [ "flake8==7.3.0" ]
flake8-isort = [ "flake8-isort==6.1.2" ]
ruff = [ "ruff==0.12.4" ]


[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
